--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <h1 class="cover__heading">RegExp</h1>
         </div>
         <div class="block">
-            <form novalidate class="form" name="register" action="http://httpbin.org/post" method="POST">
+            <form  class="form" name="register" action="http://httpbin.org/post" method="POST">
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
                         <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]+(-[А-ЯЁ][а-яё]+)?$" placeholder="Имя" minlength="2" maxlength="20" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="name" pattern="^[A-Za-z0-9\S]+@[a-zA-Z0-9\S]+\.[a-zA-Z]{2,}$" placeholder="E-Mail" />
+                        <input class="form__input" type="text" name="email" pattern="^\S+@\S+\.[a-zA-Z]{2,}$" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="name" placeholder="Телефон" pattern="^\+?(7|8)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}$" minlength="" maxlength="" />
+                        <input class="form__input" type="tel" name="phone" placeholder="Телефон" pattern="^\+?(7|8)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}$" minlength="" maxlength="" required />
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="^(https|http):\/\/(w{3}\.)?(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}|[a-zA-Z0-9]+)\.([a-zA-Z0-9]+\.)?[a-zA-Z]{2,}\/?(:\d{2,5})?(\S{1,})?$" placeholder="Ваш сайт" />
+                        <input class="form__input" type="url" name="url" pattern="^http(s)?:\/\/([a-z0-9]+\.([a-z0-9]+\.)?[a-z]{2,6}\/[a-z0-9-/]*#?|((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(:\d{2,5})?)" placeholder="Ваш сайт" required />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
