--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]+(-[А-ЯЁ][а-яё]+)?$" placeholder="Имя" minlength="2" maxlength="20" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="^\S+@\S+\.[a-zA-Z]{2,}$" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="^[a-zA-Z0-9-_.]+@[a-zA-Z0-9-_.]+\.[a-zA-Z]{2,6}$" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="^http(s)?:\/\/([a-z0-9]+\.([a-z0-9]+\.)?[a-z]{2,6}\/[a-z0-9-/]*#?|((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(:\d{2,5})?)" placeholder="Ваш сайт" required />
+                        <input class="form__input" type="url" name="url" pattern="^http(s)?:\/\/([a-z0-9]+\.([a-z0-9]+\.)?[a-z]{2,6}(\/[a-z0-9-]*)*#?|((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(:\d{2,5})?(\/[a-z0-9-]*)*#?)$" placeholder="Ваш сайт" required />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
